WriteNoteService/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: write-note
  name: write-note
  namespace: default
spec:
  replicas: 1 #CHANGE
  minReadySeconds: 45
  selector:
    matchLabels:
      app: write-note
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: write-note
    spec:
      containers:
      - image: pratik502/write-note:0.0.2 #CHANGE 0.0.1 version has PATH_PRIOVIDE_SERVICE_HOST in feign
        imagePullPolicy: IfNotPresent
        name: write-note
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: write-note
  name: write-note
  namespace: default
spec:
  ports:
  - # nodePort: 30701 #CHANGE
    port: 8901 #CHANGE
    protocol: TCP
    targetPort: 8901 #CHANGE
  selector:
    app: write-note
  sessionAffinity: None #CHANGE
  type: LoadBalancer  #try value -NodePort for ingress
